# privacy-firewall-starter-kit

./: .gitignore  AGENTS.md  CLAUDE.md  MASTER_PROMPT.md  README.md  pyproject.toml
.ai/: CURRENT_STATE.md  ENGINE_RULES.md  IMPLEMENTATION_ORDER.md  PROJECT_CONTEXT.md  START_HERE.md  WORKFLOW_RULES.md
.github/workflows/: build-installers.yml  ci.yml
TestFiles/: generate_sbi.py
benchmarks/: generate_benchmarks.py  precision.py  runner.py
examples/: README.md  benchmark_synthetic.py  generate_advanced_samples.py  generate_samples.py
examples/benchmark/: README.md
examples/synthetic/: 01-form16.json  02-payslip.json  03-tricky-edge-cases.json  04-aadhaar-checksum.json  05-payslip-batch-2.json  06-payslip-batch-3.json  07-form16-batch-2.json  README.md  precision_baseline.json  summary.json
packaging/: README.md  SOURCE_OFFER.txt  icon.icns  launcher.py  make_icons.py  privacy_firewall.spec  smoke_test.py
packaging/windows/: installer.iss
src/privacy_firewall/: __init__.py  __main__.py
tasks/: F001_REVIEW_UX_POLISH.md  F002_PHONE_PRECISION.md  F003_CHAR_GEOMETRY.md  F004_WORKSPACE_MEMORY.md  F005_NAME_DETECTION.md  F006_BATCH_REDACTION.md  F007_VERIFICATION_CERTIFICATE.md  F008_GSTIN_DETECTOR.md  MASTER_PROMPT_APPEND.md  P001_DETECTION_EVIDENCE.md  P002_CONTEXT_SCORING.md  P003_AADHAAR_VERHOEFF.md  P004_PRECISION_BENCHMARK.md  P005_POLICY_PROFILES.md  P006_DECISION_ENGINE.md  P007_PLAN_CLI.md  P008_PAGE_IMAGE_RENDERER.md  P009_REVIEW_UI.md  P010_FEEDBACK_MEMORY.md  R001_DOCUMENT_DIAGNOSTICS.md  R002_TEXT_QUALITY.md  R003_PIPELINE_SELECTOR.md  R004_OCR_PROVIDER.md  R005_PADDLEOCR.md  R006_HYBRID_MERGE.md  R007_LAYOUT_ANALYZER.md  R008_BANK_PROFILE.md  R009_DOCTOR_CLI.md  R010_REGRESSION.md  README.md  TASK-003.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-013.md
tasks/completed/: TASK-002.md  TASK-004.md  TASK-011.md  TASK-012.md  TASK-014.md  TASK-015.md
tests/: test_cli.py  test_cli_batch.py  test_cli_plan.py
tests/bank_profiler/: test_helpers.py  test_models.py  test_profilers.py
tests/benchmarks/: test_precision.py  test_regression.py
tests/detectors/: test_aadhaar_detector.py  test_account_detector.py  test_base.py  test_email_detector.py  test_gstin_detector.py  test_name_detector.py  test_pan_detector.py  test_phone_detector.py  test_regex_detector.py  test_registry.py  test_result.py  test_upi_detector.py
tests/diagnostics/: test_analyzer.py  test_pipeline_selector.py  test_text_quality.py
(+110 files in other folders)
