[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-firewall"
version = "0.1.0"
description = "Offline-first PII Detection & Redaction Engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pymupdf>=1.24",
    "typer>=0.12",
    "pyyaml>=6",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.8",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
privacy-firewall = "privacy_firewall.__main__:entry_point"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["privacy_firewall"]
